# toll-calculator

j_toll/: Cargo.toml  README.md  car.json  diplomat.json  test_data.json
j_toll/src/: cli.rs  main.rs  passage.rs  vehicle.rs
j_toll/src/passage/: custom_serde_formats.rs  mod.rs
