[package]
name = "j_toll"
version = "0.1.0"
authors = ["Joel Zandén <info@joelzanden.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
chrono = { version = "0.4.19", features = ["serde"] }